--- a/loja.html
+++ b/loja.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div>
-    <img src="/logo.png" alt="logo da loja" class="logo">
+    <img src="/images/logo.png" alt="logo da loja" class="logo">
     <p>Redes</p>
     <a href="https://www.instagram.com/diiassf/">
       <i class="fa-brands fa-instagram"></i>
@@ -61,7 +61,7 @@
   
   <div class="shoe-container">
     <div class="shoe">
-      <img src="/AirMax90.jpeg" alt="AirMax90">
+      <img src="/images/AirMax90.jpeg" alt="AirMax90">
       <h1>Air Max 90</h1>
       <p>Tênis Air max 90, preto, Número 38 ao 44 </p>
       <p>R$570,00</p>
@@ -69,7 +69,7 @@
     </div>
 
     <div class="shoe">
-      <img src="/airmax90azul.jpeg" alt="AirMax90 Azul">
+      <img src="/images/airmax90azul.jpeg" alt="AirMax90 Azul">
       <h1>Air Max 90 Azul</h1>
       <p>Tênis Air max 90, Azul, Número 38 ao 44 </p>
       <p>R$570,00</p>
@@ -77,7 +77,7 @@
     </div>
 
     <div class="shoe">
-      <img src="/airMax90branco.jpeg" alt="Air max 90 branco">
+      <img src="/images/airMax90branco.jpeg" alt="Air max 90 branco">
       <h1>Air Max 90 Branco</h1>
       <p>Tênis Air max 90, Branco, Número 38 ao 44 </p>
       <p>R$570,00</p>
@@ -85,7 +85,7 @@
     </div>
 
     <div class="shoe">
-      <img src="/airmax97preto.jpeg" alt="Air max 97 preto">
+      <img src="/images/airmax97preto.jpeg" alt="Air max 97 preto">
       <h1>Air Max 97 Preto</h1>
       <p>Tênis Air max 97, preto, Número 38 ao 44 </p>
       <p>R$650,00</p>
@@ -93,7 +93,7 @@
     </div>
 
     <div class="shoe">
-      <img src="/pumapreto.jpeg" alt="Puma preto">
+      <img src="/images/pumapreto.jpeg" alt="Puma preto">
       <h1>Puma preto</h1>
       <p>Tênis Puma preto, preto, Número 38 ao 44 </p>
       <p>R$490,00</p>
@@ -101,7 +101,7 @@
     </div>
 
     <div class="shoe">
-      <img src="/VansOldSkool.jpeg" alt="Vans old skool">
+      <img src="/images/VansOldSkool.jpeg" alt="Vans old skool">
       <h1>Vans old skool</h1>
       <p>Tênis Vans old skool, preto, Número 38 ao 44 </p>
       <p>R$450,00</p>
